RESOLVED FIXED61215
Default min DOM Timer interval is not set soon enough for first page to pick it up in WK2
https://bugs.webkit.org/show_bug.cgi?id=61215
Summary Default min DOM Timer interval is not set soon enough for first page to pick ...
Matthew Delaney
Reported 2011-05-20 14:00:24 PDT
The min DOM timer interval is set just after the first page is created. When pages are created, they use the currently set timer interval. Thus, we should be setting the min DOM timer interval sooner - ideally, just before page creation. As a follow up, this DOM timer setting code could be cleaned up better very soon since it appears that all (or at least most) of the ports are now agreeing upon default values. I've filed this bug for that followup cleanup: https://bugs.webkit.org/show_bug.cgi?id=61214
Attachments
Patch (1.53 KB, patch)
2011-05-20 14:02 PDT, Matthew Delaney
no flags
Patch (1.60 KB, patch)
2011-05-20 14:07 PDT, Matthew Delaney
sfalken: review+
Matthew Delaney
Comment 1 2011-05-20 14:02:26 PDT
Darin Adler
Comment 2 2011-05-20 14:04:44 PDT
Comment on attachment 94267 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=94267&action=review > Source/WebKit2/WebProcess/WebPage/WebPage.cpp:210 > + Settings::setDefaultMinDOMTimerInterval(0.004); Moving this early seems good, but it’s a bit strange to tuck this in between setting up the page clients and calling new Page, since the pageClients structure is really just an argument to the Page constructor. I suggest calling this even before the definition of the pageClients local variable, right after the assert.
Matthew Delaney
Comment 3 2011-05-20 14:07:25 PDT
Matthew Delaney
Comment 4 2011-05-20 14:40:42 PDT
Note You need to log in before you can comment on or make changes to this bug.