2011-05-20  Matthew Delaney  <mdelaney@apple.com>

Reviewed by Steve Falkenburg.

        Default min DOM Timer interval is not set soon enough for first page to pick it up in WK2
        https://bugs.webkit.org/show_bug.cgi?id=61215

        * WebProcess/WebPage/WebPage.cpp: Simply moving the DOM min timer interval setting to before the first page creation.


Canonical link: https://commits.webkit.org/76588@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86985 268f45cc-cd09-0410-ab3c-d52691b4dbfc